--- a/css/styles.css
+++ b/css/styles.css
@@ -5,22 +5,33 @@
  *main.css
  */
 
-
+body {
+    background-color: #D32F2F;
+}
 .wrapper {
   margin-top: 60px;
 }
 
 
 .calculator {
+    
+    background-color: #9E9E9E;
     margin: 0 auto;
-    width: 220px;
-    height: 300px;  
-    border: 2px solid brown;
+    width: 260px;
+    height: 300 px;  
+    border: 2px solid brown; 
 }
 
-#output { 
-    border: 2px solid blue;
-    height: 30px;
+.buttonContainer {
+    margin-top: 17px;
+    margin-left: 6.4px;
+    margin-bottom: 17px;
+}
+
+#output {   
+    background-color: white;
+    border: 2px solid white;
+    height: 60px;
 }
 
 /*
@@ -33,7 +44,8 @@ button {
 }
 */
 button {
-    width: 40px;
+    width: 50px;
     height: 30px;
     margin: 4px;
+    padding-left: 5px;
 }
