--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,13 @@ body {
     background-color: white;
     border: 2px solid white;
     height: 60px;
+    
 }
-
+#output p{
+    margin-top: 23px;
+    padding-left: 15px;
+    font-size: 24px;
+}
 /*
 button {
     width: 50px;
@@ -48,4 +53,13 @@ button {
     height: 30px;
     margin: 4px;
     padding-left: 5px;
+    font-style: bold;
 }
+
+#equalSign {
+    width:113px;
+}
+
+.button-error {
+            background: rgb(202, 60, 60); /* this is a maroon */
+        }
