--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
     margin: 0 auto;
     width: 260px;
     height: 300 px;  
-    border: 2px solid brown; 
+    border: 2px solid #D32F2F; 
 }
 
 .buttonContainer {
